refactor(blog): get rid of sun.misc.Base64