@@ -21,10 +21,11 @@ import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
+import java.util.Base64;
+import java.util.Base64.Encoder;
 import java.util.Random;
 
 import com.mongodb.*;
-import sun.misc.BASE64Encoder;
 
 public class UserDAO {
     private final DBCollection usersCollection;
@@ -62,9 +63,11 @@ public class UserDAO {
             String saltedAndHashed = password + "," + salt;
             MessageDigest digest = MessageDigest.getInstance ("MD5");
             digest.update (saltedAndHashed.getBytes ());
-            BASE64Encoder encoder = new BASE64Encoder ();
+
+            Encoder encoder = Base64.getEncoder ();
+
             byte hashedBytes[] = (new String (digest.digest (), "UTF-8")).getBytes ();
-            return encoder.encode (hashedBytes) + "," + salt;
+            return encoder.encodeToString (hashedBytes) + "," + salt;
         }
         catch (NoSuchAlgorithmException e) {
             throw new RuntimeException ("MD5 is not available", e);
